force-app/main/default/objects/DMAPP__DM_Account_Plan__c/DMAPP__DM_Account_Plan__c.object-meta.xml
<CustomObject>
    <label>Account Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>