force-app/main/default/objects/DMAPP__DM_Account_Plan__c/fields/DMAPP__Actions_Ratio__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Actions_Ratio__c</fullName>
    <formula>IF(DMAPP__Open_Actions__c + DMAPP__Overdue_Actions__c != 0, (DMAPP__Open_Actions__c) / (DMAPP__Open_Actions__c + DMAPP__Overdue_Actions__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actions Ratio (DEPRECATED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>