force-app/main/default/objects/DMAPP__DM_Account_Plan__c/fields/DMAPP__Minimum_Due_Date_Of_Open_Actions__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Minimum_Due_Date_Of_Open_Actions__c</fullName>
    <description>This field is used by the Any Overdue Actions formula field to determine whether there are any overdue actions.</description>
    <label>Minimum Due Date Of Open Actions</label>
    <summarizedField>DMAPP__AM_Action__c.DMAPP__Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>DMAPP__AM_Action__c.DMAPP__Open__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>DMAPP__AM_Action__c.DMAPP__Account_Plan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>