force-app/main/default/objects/DMAPP__DM_Account_Plan__c/fields/DMAPP__Open_Actions__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Open_Actions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open Actions (DEPRECATED)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>