force-app/main/default/objects/DMAPP__DM_Account_Plan__c/listViews/DMAPP__All.listView-meta.xml
<ListView>
    <fullName>DMAPP__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>